<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fullscreen_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".FullscreenActivity">


    <ImageView
        android:id="@+id/mainForecastIcon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/mainForecastDescription"
        android:tint="@color/colorPrimary"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.4"
        app:srcCompat="@drawable/ic_wi_cloudy" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainForecastTemp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/mainForecastIcon"
        app:layout_constraintTop_toBottomOf="@+id/currentDate" />

    <TextView
        android:id="@+id/currentDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/currentDate"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/mainForecastIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currentTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:text="@string/currentTime"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainForecastIcon" />

    <ImageView
        android:id="@+id/thermometerIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/thermometerDescription"
        android:tint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/currentTime"
        app:layout_constraintStart_toEndOf="@+id/currentTime"
        app:layout_constraintTop_toTopOf="@+id/currentTime"
        app:srcCompat="@drawable/ic_wi_thermometer" />

    <TextView
        android:id="@+id/currentTemperature"
        android:layout_width="19dp"
        android:layout_height="wrap_content"
        android:text="@string/currentTemperature"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/currentTime"
        app:layout_constraintStart_toEndOf="@+id/thermometerIcon" />

    <TextView
        android:id="@+id/mainForecastTempDegC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/degreesC"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <TextView
        android:id="@+id/currentTemperatureDegC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/degreesC"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/currentTime"
        app:layout_constraintStart_toEndOf="@+id/currentTemperature" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="409dp"
        android:layout_height="540dp"
        android:layout_marginTop="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentTime" />


</androidx.constraintlayout.widget.ConstraintLayout>
